# glasses-finder-app

./: README.md  example_usage.py  glasses_mcp_server.py  glasses_scraper.py  glassesmcp_requirements.txt  image_test.html  mcp_config_example.json  pyproject.toml  test_image_fix.py
glasses-finder/: netlify.toml  package-lock.json  package.json  standalone.html
glasses-finder/src/: App.jsx  index.css
glasses-finder/src/components/: GlassesFinder.jsx  GlassesFinderRefactored.jsx
glasses-finder/src/components/ui/: Button.jsx  ErrorBoundary.jsx  GlassesCard.jsx  GlassesImageCard.jsx  Input.jsx  LoadingSpinner.jsx  Select.jsx  Toast.jsx
glasses-finder/src/hooks/: useFormValidation.js
glasses-finder/src/services/: aiImageService.js  glassesService.js  glassesServiceOld.js
glasses-finder/src/utils/: errorHandler.js
